[gd_scene load_steps=8 format=3 uid="uid://blm7q0ti77v0c"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_c1qwg"]

[sub_resource type="FontFile" id="FontFile_veac4"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_82q5c"]
font = SubResource("FontFile_veac4")
font_size = 35
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="FontFile" id="FontFile_eb20e"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_jcuqm"]
line_spacing = 10.0
font = SubResource("FontFile_eb20e")
font_size = 35
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_k4e8x"]
line_spacing = 10.0
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_c4bx6"]
line_spacing = 10.0
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1qwg")

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.643137, 1)

[node name="GridContainer" type="GridContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -176.0
offset_right = -4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="Menu/GridContainer"]
texture_filter = 4
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
label_settings = SubResource("LabelSettings_82q5c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.643137, 1)

[node name="GridContainer" type="GridContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -224.0
offset_right = -4.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Settings" type="Label" parent="Settings/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
label_settings = SubResource("LabelSettings_jcuqm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Settings/GridContainer"]
layout_mode = 2
text = "Difficulty"
label_settings = SubResource("LabelSettings_k4e8x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Difficulty" type="OptionButton" parent="Settings/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="Settings/GridContainer"]
texture_filter = 2
layout_mode = 2
text = "Theme"
label_settings = SubResource("LabelSettings_c4bx6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Theme" type="ColorPickerButton" parent="Settings/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Return" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -79.0
offset_right = 2.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
text = "Return"

[connection signal="pressed" from="Menu/GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="Settings/GridContainer/Difficulty" to="." method="_on_difficulty_item_selected"]
[connection signal="color_changed" from="Settings/GridContainer/Theme" to="." method="_on_theme_color_changed"]
[connection signal="pressed" from="Settings/Return" to="." method="_on_return_pressed"]
